[package]
name = "yew"
version = "0.5.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
repository = "https://github.com/DenisKolodin/yew"
homepage = "https://github.com/DenisKolodin/yew"
documentation = "https://docs.rs/yew/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "A framework for making client-side single-page apps"

[dependencies]
failure = "0.1"
log = "0.4"
http = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
anymap = "0.12"
slab = "0.4"
stdweb = "0.4"

[dev-dependencies]
serde_derive = "1"

[features]
default = []
web_test = []

